[package]
name = "trunk-template"
version = "0.1.0"
edition = "2021"
description = "Template for starting a Yew project using Trunk"
readme = "README.md"
repository = "https://github.com/yewstack/yew-trunk-minimal-template"
license = "MIT OR Apache-2.0"
keywords = ["yew", "trunk"]
categories = ["gui", "wasm", "web-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
yew = { version = "0.20", features = ["csr"] }
yew-router = { git = "https://github.com/yewstack/yew.git" }
tracing = "0.1.40"
wasm-logger = "0.2.0"
log = "0.4.21"
wasm-bindgen = "0.2.92"
serde = { version = "1.0.197", features = ["derive"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
gloo = "0.11.0"
yewdux = "0.10.0"
web-sys = { version = "0.3.69", features = ["HtmlInputElement", "Window"] }
